unpackaged/main/default/objects/Custom_Pricing__c/fields/Included_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Included_Quantity__c</fullName>
    <inlineHelpText>When creating a record of type &#39;QCP - Incremental Pricing&#39;, this value represents the included quantity to base our calculations off.</inlineHelpText>
    <label>Included Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>