unpackaged/main/default/objects/Custom_Pricing__c/fields/Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Quantity__c</fullName>
    <inlineHelpText>Matching criteria used for selecting the correct Custom Pricing record during calculation. A value of -1 denotes the max quantity is unending.</inlineHelpText>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>