unpackaged/main/default/objects/Custom_Pricing__c/fields/Maximum_Quantity_Float__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Quantity_Float__c</fullName>
    <formula>Maximum_Quantity__c / 1000.0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Quantity (Float)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>