unpackaged/main/default/objects/Custom_Pricing__c/fields/Minimum_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price__c</fullName>
    <label>Minimum Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>