unpackaged/main/default/objects/Custom_Pricing__c/fields/Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Quantity__c</fullName>
    <inlineHelpText>Matching criteria used for selecting the correct Custom Pricing record during calculation</inlineHelpText>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>