unpackaged/main/default/objects/Custom_Pricing__c/fields/Minimum_Quantity_Float__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Quantity_Float__c</fullName>
    <formula>Minimum_Quantity__c / 1000.0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Quantity (Float)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>