unpackaged/main/default/objects/Custom_Pricing__c/fields/Per_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit_Price__c</fullName>
    <label>Per Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>