unpackaged/main/default/objects/Custom_Pricing__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Custom Pricings</relationshipLabel>
    <relationshipName>Custom_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>