unpackaged/main/default/objects/Custom_Pricing__c/fields/Sync_Currencies__c.field-meta.xml
<CustomField>
    <fullName>Sync_Currencies__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked any time this reecord is created or updated it will synchronize changes across all supported currencies. This will create/update records in all other supported currencies automatically</inlineHelpText>
    <label>Sync Currencies</label>
    <type>Checkbox</type>
</CustomField>