unpackaged/main/default/objects/Custom_Pricing__c/fields/Tier_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Tier_Pricing_Type__c</fullName>
    <label>Tier Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Price</fullName>
            </value>
            <value>
                <fullName>Base Price * Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>