unpackaged/main/default/objects/Custom_Pricing__c/fields/Use_Per_1000__c.field-meta.xml
<CustomField>
    <fullName>Use_Per_1000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Per 1,000</label>
    <type>Checkbox</type>
</CustomField>