unpackaged/main/default/objects/Custom_Pricing__c/validationRules/Diable_Currency_Sync_Non_USD.validationRule-meta.xml
<ValidationRule>
    <fullName>Diable_Currency_Sync_Non_USD</fullName>
    <active>true</active>
    <description>Stops users from creating Custom Pricing records with Currency Sync functionality on non USD entries.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(CurrencyIsoCode,&#39;USD&#39;)),Sync_Currencies__c)</errorConditionFormula>
    <errorDisplayField>Sync_Currencies__c</errorDisplayField>
    <errorMessage>You can not sync currencies for a record that is not set to USD.</errorMessage>
</ValidationRule>